// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a plaintext text block 1`] = `
<div
  className="css-13f5ulz-TextElement"
>
  <div
    className="css-pc7kr-TextElement"
  >
    <span
      className="css-enkqi-generateNodes"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders a text block with custom styles 1`] = `
<div
  className="css-13f5ulz-TextElement"
>
  <div
    className="css-pc7kr-TextElement"
  >
    <span
      className="css-1k1lbqh-generateNodes"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`Text renders an empty text block 1`] = `
<div
  className="css-13f5ulz-TextElement"
>
  <div
    className="css-pc7kr-TextElement"
  >
    <span
      className="css-enkqi-generateNodes"
      onClick={[Function]}
    >
      

    </span>
  </div>
</div>
`;
